Fixes to ensure responsive UI works on iOS + Safari

--- a/src/components/scroll-button/scroll-button.scss
+++ b/src/components/scroll-button/scroll-button.scss
@@ -24,17 +24,3 @@
         }
     }
 }
-
-@media (max-width: 768px) {
-    .scroll-button-wrapper .scroll-button {
-        height: 32px;
-        width: 32px;
-        border-radius: 16px;
-        bottom: 38px;
-
-        img {
-            width:16px;
-            padding:8px 0;
-        }
-    }
-}
