--- a/src/components/spacestagram-card/spacestagram-card.scss
+++ b/src/components/spacestagram-card/spacestagram-card.scss
@@ -1,4 +1,6 @@
 .spacestagram-card-wrapper {
+    margin-bottom:24px;
+
     .card {
         max-width:600px;
         border-radius:8px;
